# cism

./: .gitignore  CMakeLists.txt  LICENSE  README
.github/workflows/: codeql.yml  flawfinder.yml  msvc.yml
src/: CMakeLists.txt  cism.cpp  execute.cpp  system_call.cpp
src/include/: call.h  cism.h  cism_error.h  constants.h  system_call.h
tests/: CMakeLists.txt  cism.test.cpp  system_call.test.cpp
